--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,6 +9,7 @@ services:
     ports:
       - "8089:8089"
     environment:
-      - JWT_SECRET=SECRET
-    volumes:
-      - .:/app                 
+      - PORT=8089
+      - JWT_SECRET=supersecret
+    working_dir: /app
+    command: ["/app/main"]
